test/org/midica/testfiles/failing/zero-with-m-2.midica
INCLUDE inc/instruments.midica

0  c,d  pat

PATTERN pat
	- - m
END
